* …

=== Action API internal changes in 1.32 ===
* Added 'ApiParseMakeOutputPage' hook.

=== Languages updated in 1.32 ===
MediaWiki supports over 350 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Phabricator reports.

* (T193566) Added language support for Ambonese Malay (abs).

=== Breaking changes in 1.32 ===
* $wgRequestTime was removed (deprecated in 1.25).
  Use $_SERVER['REQUEST_TIME_FLOAT'] or WebRequest::getElapsedTime() instead.
* The MediaWikiI18N class was removed (deprecated in 1.31).
* QuickTemplate::setTranslator() was removed (deprecated in 1.31).
  Use Skin::msg() instead.
* wfInitShellLocale() was removed (deprecated in 1.30).
* wfShellExecDisabled() was removed (deprecated in 1.30).
* The type string for the parameter $lang of DateFormatter::getInstance is
  removed (deprecated in 1.31).
* The EDIT_TOKEN_SUFFIX constant was removed (deprecated in 1.27).
  Use MediaWiki\Session\Token::SUFFIX instead.
* EditPage::isOouiEnabled() was removed (deprecated in 1.30).
* mw.util.wikiGetlink() was removed (deprecated in 1.23).
  Use mw.util.getUrl() instead.
* (T61113) The following methods and constants from the Revision class were deprecated in
  1.25 and have now been removed.
  * Revision::getRawUser()
  * Revision::getRawUserText()
  * Revision::getRawComment()
* window.gM() from mediawiki.jqueryMsg was removed (deprecated in 1.23).
  Use mw.msg() or mw.message() instead.

=== Deprecations in 1.32 ===
* Use of a StartProfiler.php file is deprecated in favour of placing
  configuration in LocalSettings.php.
* HTMLForm::setSubmitProgressive() is deprecated. No need to call it. Submit
  button is already marked as progressive.
* Skin::setupSkinUserCss() is deprecated. Adding of modules to load
  has been centralised to Skin::getDefaultModules(), which is now capable
  of queueing style modules as well.

=== Other changes in 1.32 ===
* …

== Compatibility ==